@@ -25,6 +25,7 @@ Scrollbar 0.1 Scrollbar.qml
 internal ModelSectionCounter ModelSectionCounter.qml
 Object 0.1 Object.qml
 OptionSelector 0.1 OptionSelector.qml
+OptionSelectorDelegate 0.1 OptionSelectorDelegate.qml
 Page 0.1 Page.qml
 internal PageTreeNode PageTreeNode.qml
 PageStack 0.1 PageStack.qml
