@@ -9,8 +9,9 @@ UNRELEASED
 
 API Changes
 ***********
-
-* ADDED IN Empty: property alias divider
+* CHANGED IN: OptionSelector: property var values TO property var model
+* ADDED IN: OptionSelector: property Component delegate 
+* ADDED IN: Empty: property alias divider
 * ADDED IN: OptionSelector: signal listItemClicked()
 * REMOVED IN ALL: attached property ItemStyle
 * ADDED IN OrientationHelper: property alias rotating
